# ProxKy-v2

./: .gitignore  README.md  config.cfg  pyproject.toml  requirements.txt
.run/: Generate.run.xml
data/: ids.txt
data/resources/cutting/: Cards.ai  Cards.studio3  Deckbox Commander Bot.studio3  Deckbox Commander Top.studio3  Deckbox Commander.ai
data/resources/indesign/: Back.indd  Print.indd  Sandbox.idml  Swatches.ase
proxky/configuration/: variables.py
proxky/data/: card.py  fetcher.py
proxky/handler/: card_data_handler.py  card_layout_handler.py  indesign_handler.py  xml_handler.py
proxky/main/: main.py  pipeline.py  requirements.txt
proxky/main/configuration/: config.py  variables.py
proxky/main/data/: card.py  fetcher.py
proxky/main/handler/: card_data_handler.py  card_layout_handler.py  indesign_handler.py  xml_handler.py
proxky/main/misc/: enumerations.py  id_generator.py  info.py  logging.py  mtg.py  util.py
proxky/misc/: enumerations.py  id_generator.py  logging.py  mtg.py  util.py
proxky/test/: ProxKyTest.py
src/main/: main.py  pipeline.py
src/main/configuration/: config.py  variables.py
src/main/data/: card.py  fetcher.py
src/main/handler/: card_data_handler.py  card_layout_handler.py  id_handler.py  indesign_handler.py  xml_handler.py
src/main/info/: info.py
src/main/misc/: id_generator.py  info.py  mtg.py  util.py
src/main/utils/: card_data_modifier.py  id_generator.py  info.py  misc.py  mtg.py  xml_modifier.py
src/test/: FetcherTest.py  ProxKyTest.py
test/: ProxKyTest.py
test/resources/: test_decklist.txt
